fix: overflow again...

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
@@ -16,8 +15,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
-  padding: 0px 8px;
 }
 
 body {
@@ -29,4 +26,5 @@ body {
   justify-content: center;
   background-color: #f3f3f3;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
